--- a/TrainingPlatform/TrainingPlatform/appsettings.json
+++ b/TrainingPlatform/TrainingPlatform/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TrainingPlatformConnection": "Data Source=DESKTOP-21D1QB4;Initial Catalog=TrainingPlatform;Integrated Security=True"
+  }
 }
