--- a/TrainingPlatform/TrainingPlatform.DataAccess/TrainingPlatform.DataAccess.csproj
+++ b/TrainingPlatform/TrainingPlatform.DataAccess/TrainingPlatform.DataAccess.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="CQRS\Commands\" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
@@ -15,12 +19,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\TrainingPlatform.ApplicationServices\TrainingPlatform.ApplicationServices.csproj" />
-    <ProjectReference Include="..\TrainingPlatform.DataAccess\TrainingPlatform.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
