--- a/TrainingPlatform/TrainingPlatform.ApplicationServices/TrainingPlatform.ApplicationServices.csproj
+++ b/TrainingPlatform/TrainingPlatform.ApplicationServices/TrainingPlatform.ApplicationServices.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\TrainingPlatform.DataAccess\TrainingPlatform.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="API\Domain\Plan\" />
+  </ItemGroup>
+
 </Project>
