Add MapingModel and ValidatorsModel with FluentValidation

--- a/TrainingPlatform/TrainingPlatform.ApplicationServices/TrainingPlatform.ApplicationServices.csproj
+++ b/TrainingPlatform/TrainingPlatform.ApplicationServices/TrainingPlatform.ApplicationServices.csproj
@@ -12,4 +12,8 @@
     <Folder Include="API\Domain\Plan\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
+  </ItemGroup>
+
 </Project>
