--- a/TrainingPlatform/TrainingPlatform.ApplicationServices/TrainingPlatform.ApplicationServices.csproj
+++ b/TrainingPlatform/TrainingPlatform.ApplicationServices/TrainingPlatform.ApplicationServices.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
+    <PackageReference Include="NLog" Version="4.7.13" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
   </ItemGroup>
 
 </Project>
