--- a/TrainingPlatform/TrainingPlatform.ApplicationServices/TrainingPlatform.ApplicationServices.csproj
+++ b/TrainingPlatform/TrainingPlatform.ApplicationServices/TrainingPlatform.ApplicationServices.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
     <PackageReference Include="NLog" Version="4.7.13" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+    <PackageReference Include="RestSharp" Version="107.0.3" />
   </ItemGroup>
 
 </Project>
