--- a/TrainingPlatform/TrainingPlatform.DataAccess/TrainingPlatform.DataAccess.csproj
+++ b/TrainingPlatform/TrainingPlatform.DataAccess/TrainingPlatform.DataAccess.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="NewFolder\" />
+    <Folder Include="Test\" />
   </ItemGroup>
 
 </Project>
